--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -9,15 +9,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200" />
-
-
 </head>
 
 <body>
-
-
     <header>
         <a class="logo" href="/"><img class="logo_img" height="75px" src="imgs/logo.png" alt="logo"></a>
+
         <nav>
             <ul class="nav__links">
                 <li><a onclick="window.location.href='/blogs'">Blogs</a></li>
@@ -25,10 +22,9 @@
                 <li><a href="#">Team</a></li>
             </ul>
         </nav>
+
         <a class="cta"> Sponser us!
-            <div class="icon">
-                💸
-            </div>
+            <div class="icon"> 💸 </div>
         </a>
 
         <p style="padding: 3%;" class="menu"><span class=" material-symbols-outlined">menu</span></p>
@@ -44,7 +40,42 @@
     </div>
     </div>
 
-    <div></div>
+    <div style="width: 100%;">
+        <div style="margin:auto;padding: 10px;
+    border-radius: 35px;
+    width: 85% ;
+    overflow: hidden;
+    background-color: #ffdd58;">
+            <h2>December 4th 2022</h2>
+            <h1 style="font-size: 5rem;">The First meeting session</h1>
+        </div>
+        <br>
+        <img style="    border-radius: 35px; width: 85%;
+            " src="imgs/blogs/blog1.jpg" alt="" srcset="">
+        <br>
+        <br>
+        <div style="margin:auto;padding:50px;
+    border-radius: 35px;
+    width: 85% ;
+    overflow: hidden;
+    background-color: #ffdd58;">
+            <h2>On Sunday, the 4th of December Team Legogoa Axiom gathered at the house of our mentor, Saieesh Gandhi to
+                discuss and understand the format, scoring system and components of the game. <br>
+
+                With excellent presentations made by Viraj, Aniket, Sai Pranav and Vighnesh, helped us to understand
+                rules of the game and triggered our thinking about our strategy in the tournament. <br>
+
+                We are also very excited that the parts will be arriving in a few days time and we can build and program
+                our robot soon. <br>
+
+                Our former website designed and put together by Aditya and Taksh went live. <br>
+
+                Our young instructors Venkatesh, Shounak and Dhruv conducted a robotics workshop and raised ₹6000 to
+                contribute to our sponsorship and hope to raise much more. <br>
+                - Written By Aditya Pai</h2>
+        </div>
+
+    </div>
 
     <script src="https://kit.fontawesome.com/3b366c8bb1.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="mobile.js"></script>
