First proper website

--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
         </h1>
     </div>
     <br>
+
+    <br>
+    <img style=" border-radius: 35px; width: 85%;
+        " src="imgs/blogs/homes.jpg" alt="" srcset="">
+    <br>
+    <br>
     <br>
 
     <h1 style="font-size: 4rem;">Blogs</h1>
@@ -120,8 +126,7 @@
                 </div>
                 <div class="card__content">
                     <p class="card__category">9th December</p>
-                    <h3 class="card__heading">FUND-RAISING INITIATIVE:
-                        Conducting Robotics Workshops in Goa
+                    <h3 class="card__heading">Fundraising initiatives
 
                     </h3>
                 </div>
@@ -154,7 +159,9 @@
                 </a>
             </li>
             <div>
+
             </section>
+
             <script src="https://kit.fontawesome.com/3b366c8bb1.js"
                 crossorigin="anonymous"></script>
             <script type="text/javascript" src="mobile.js"></script>
