--- a/index.html
+++ b/index.html
@@ -161,7 +161,11 @@
             <div>
 
             </section>
-
+            <br>
+            <h2 style="font-size: 2rem; text-align: center;">©️ Legogoa Axiom
+                2022</h2>
+            <h2 style="font-size: 2rem; text-align: center;">ftclegogoa@gamil.com</h2>
+            <br>
             <script src="https://kit.fontawesome.com/3b366c8bb1.js"
                 crossorigin="anonymous"></script>
             <script type="text/javascript" src="mobile.js"></script>
