--- a/index.html
+++ b/index.html
@@ -162,9 +162,12 @@
 
             </section>
             <br>
-            <h2 style="font-size: 2rem; text-align: center;">©️ Legogoa Axiom
-                2022</h2>
-            <h2 style="font-size: 2rem; text-align: center;">ftclegogoa@gamil.com</h2>
+            <footer>
+                <h3 style="font-size: 2rem; text-align: center;">©️ Legogoa
+                    Axiom
+                    2022</h3>
+                <h3 style="font-size: 2rem; text-align: center;">ftclegogoa@gamil.com</h3>
+            </footer>
             <br>
             <script src="https://kit.fontawesome.com/3b366c8bb1.js"
                 crossorigin="anonymous"></script>
