--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -5,30 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The First meeting Session</title>
+
+    <!-- 🛑 add your blogs title here -->
+    <title>Fundraising initiatives: Conducting Robotics Workshops in Goa
+
+    </title>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200" />
-
-
 </head>
 
 <body>
-
-
     <header>
         <a class="logo" href="/"><img class="logo_img" height="75px" src="imgs/logo.png" alt="logo"></a>
+
         <nav>
             <ul class="nav__links">
-                <li><a onclick="window.location.href='/blogs'">Blogs</a></li>
+                <li><a onclick="window.location.href='/#:~:text=such%20young%20minds.-,Blogs,-4TH%20DECEMBER'">Blogs</a>
+                </li>
                 <li><a href=" #">FTC</a></li>
                 <li><a href="#">Team</a></li>
             </ul>
         </nav>
+
         <a class="cta"> Sponser us!
-            <div class="icon">
-                💸
-            </div>
+            <div class="icon"> 💸 </div>
         </a>
 
         <p style="padding: 3%;" class="menu"><span class=" material-symbols-outlined">menu</span></p>
@@ -43,51 +45,37 @@
         </div>
     </div>
     </div>
+
     <div style="width: 100%;">
-        <div style="margin:auto;padding: 10px;
-    border-radius: 35px;
-    width: 85% ;
-    overflow: hidden;
-    background-color: #ffdd58;">
-            <h2>December 9th 2022</h2>
-            <h1 style="font-size: 3rem;">FUND-RAISING INITIATIVE: Conducting Robotics Workshops in Goa</h1>
+
+        <div
+            style="margin:auto;padding: 10px;  border-radius: 35px;   width: 85% ;   overflow: hidden;   background-color: #ffdd58;">
+
+            <!-- 🛑 add your date and title here -->
+            <h2>{{dates}}</h2>
+            <h1 style="font-size: 5rem;">{{title}}</h1>
 
         </div>
-
         <br>
 
-        <div style="margin:auto;padding:50px;
-    border-radius: 35px;
-    width: 85% ;
-    overflow: hidden;
-    background-color: #ffdd58;">
-            <h2>On Sunday, the 4th of December Team Legogoa Axiom gathered at the house of our mentor, Saieesh Gandhi to
-                discuss and understand the format, scoring system and components of the game. <br>
+        <!-- 🛑 add images if there are any -->
+        <img style="border-radius: 35px; width: 85%;" src="imgs\blogs\format.jpeg" alt="" srcset="">
 
-                With excellent presentations made by Viraj, Aniket, Sai Pranav and Vighnesh, helped us to understand
-                rules of the game and triggered our thinking about our strategy in the tournament. <br>
+        <br>
+        <br>
+        <div
+            style="margin:auto;padding:50px;   border-radius: 35px;  width: 85% ;  overflow: hidden;  background-color: #ffdd58;">
 
-                We are also very excited that the parts will be arriving in a few days time and we can build and program
-                our robot soon. <br>
+            <!-- 🛑 add blogs content-->
+            <h2>{{contents}}</h2>
 
-                Our former website designed and put together by Aditya and Taksh went live. <br>
-
-                Our young instructors Venkatesh, Shounak and Dhruv conducted a robotics workshop and raised ₹6000 to
-                contribute to our sponsorship and hope to raise much more. <br>
-                - Written By Aditya Pai</h2>
         </div>
-
-        <br>
-        <br>
 
     </div>
 
-
-
-
     <script src="https://kit.fontawesome.com/3b366c8bb1.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="mobile.js"></script>
-    <br>
+
 
 </body>
 
