--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <body>
 
 
-        <header>
+        <header style="width: 100%;  position: fixed;">
             <a class="logo" href="/"><img class="logo_img" height="75px"
                     src="imgs/logo.png" alt="logo"></a>
             <nav>
                 <ul class="nav__links">
-                    <li><a onclick="window.location.href='/blogs'">Blogs</a></li>
+                    <li><a onclick="window.location.href='/#:~:text=such%20young%20minds.-,Blogs,-4TH%20DECEMBER'">Blogs</a></li>
                     <li><a href=" #">FTC</a></li>
                     <li><a href="#">Team</a></li>
                 </ul>
@@ -48,8 +48,7 @@
             </div>
         </div>
     </div>
-
-    <div width=100% id="video">
+    <div width=100% id="video" style="padding-top: 100px;">
         <video style="padding: 10px;
             border-radius: 35px;
             width: 85% ;
@@ -162,11 +161,11 @@
 
             </section>
             <br>
-            <footer>
-                <h3 style="font-size: 2rem; text-align: center;">©️ Legogoa
+            <footer style="background-color: #ffdd58; padding: 5px; ">
+                <h3 style="font-size: 1rem; text-align: center;">©️ Legogoa
                     Axiom
                     2022</h3>
-                <h3 style="font-size: 2rem; text-align: center;">ftclegogoa@gamil.com</h3>
+                <h3 style="font-size: 1rem; text-align: center;">ftclegogoa@gamil.com</h3>
             </footer>
             <br>
             <script src="https://kit.fontawesome.com/3b366c8bb1.js"
