--- a/blogs/format.html
+++ b/blogs/format.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The First meeting Session</title>
+
+    <!-- 🛑 add your blogs title here -->
+    <title>{{  title }}</title>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200" />
@@ -41,38 +44,27 @@
     </div>
 
     <div style="width: 100%;">
-        <div style="margin:auto;padding: 10px;
-    border-radius: 35px;
-    width: 85% ;
-    overflow: hidden;
-    background-color: #ffdd58;">
-            <h2>December 4th 2022</h2>
-            <h1 style="font-size: 5rem;">The First meeting session</h1>
+
+        <div style="margin:auto;padding: 10px;  border-radius: 35px;   width: 85% ;   overflow: hidden;   background-color: #ffdd58;">
+
+        <!-- 🛑 add your date and title here -->
+        <h2>{{dates}}</h2>
+        <h1 style="font-size: 5rem;">{{title}}</h1>
+
         </div>
         <br>
-        <img style="    border-radius: 35px; width: 85%;
-            " src="imgs/blogs/blog1.jpg" alt="" srcset="">
+
+        <!-- 🛑 add images if there are any -->
+        <img style="border-radius: 35px; width: 85%;" src="imgs\blogs\format.jpeg" alt="" srcset="">
+
         <br>
         <br>
-        <div style="margin:auto;padding:50px;
-    border-radius: 35px;
-    width: 85% ;
-    overflow: hidden;
-    background-color: #ffdd58;">
-            <h2>On Sunday, the 4th of December Team Legogoa Axiom gathered at the house of our mentor, Saieesh Gandhi to
-                discuss and understand the format, scoring system and components of the game. <br>
+        <div
+            style="margin:auto;padding:50px;   border-radius: 35px;  width: 85% ;  overflow: hidden;  background-color: #ffdd58;">
 
-                With excellent presentations made by Viraj, Aniket, Sai Pranav and Vighnesh, helped us to understand
-                rules of the game and triggered our thinking about our strategy in the tournament. <br>
+        <!-- 🛑 add blogs content-->
+        <h2>{{contents}}</h2>
 
-                We are also very excited that the parts will be arriving in a few days time and we can build and program
-                our robot soon. <br>
-
-                Our former website designed and put together by Aditya and Taksh went live. <br>
-
-                Our young instructors Venkatesh, Shounak and Dhruv conducted a robotics workshop and raised ₹6000 to
-                contribute to our sponsorship and hope to raise much more. <br>
-                - Written By Aditya Pai</h2>
         </div>
 
     </div>
